# plox

./: .gitignore  README.md  lox.py  pyproject.toml  scanner.py  tokens.py  zz_syntax_test.lox
.run/: Generate AST.run.xml  Lox REPL.run.xml  Lox syntax test.run.xml
lox/: __main__.py  ast_printer.py  expressions.py  interpreter.py  lox.py  parser.py  scanner.py  tokens.py
lox/tools/: __main__.py  ast_generator.py
tests/: test_parser.py  test_scanner.py  test_tokens.py
tool/: generate_ast.py  lox.gram
